@@ -56,6 +56,10 @@ namespace gui
 		//! Removes an item from the list
 		virtual void removeItem(u32 index) = 0;
 
+		//! get the the id of the item at the given absolute coordinates
+		/** \return The id of the listitem or -1 when no item is at those coordinates*/
+		virtual s32 getItemAt(s32 xpos, s32 ypos) const = 0;
+
 		//! Returns the icon of an item
 		virtual s32 getIcon(u32 index) const = 0;
 
